# Computer-Science-Notes-Only-Source-Code-

Advance Data Structure and algorithim using Java/: .project  AdjacencyListGraph.java  ArrayIndexList.java  ArrayListCompleteBinaryTree.java  BinarySearchTree.java  BoundaryViolationException.java  CharStack.java  ConnectivityDFS.java  DFS.java  DNode.java  DecorablePosition.java  DefaultComparator.java  Dictionary.java  Dijkstra.java  DoubleStack.java  ElementIterator.java  EmptyListException.java  EmptyQueueException.java  EmptyStackException.java  EulerTour.java  FindPathDFS.java  FloatStack.java  Graph.java  HashTableMap.java  IntegerStack.java  InvalidKeyException.java  InvalidPositionException.java  Iterable.java  Iterator.java  Lecture1.java  Lecture3.java  LinkedBinaryTree.java  LinkedIntegerStack.java  LinkedList.java  LinkedStack.java  LinkedTree.java  List.java  ListEmptyException.java  ListMap.java  ListTest.java  (+24 more)
Advance Machine Learning/: 1 Machine Leraning in Python - MNIST Fashion-FeatureEngineering.ipynb  1 Machine Leraning in Python - MNIST Fashion.ipynb  1 Machine Leraning in Python - Predictive Modelling.ipynb  1_Machine_Learning_in_Python_MNIST_Fashion.ipynb  2.4. CNN for object recognition from files with pre-training.ipynb  ACMETelephoneABT.csv  (+16 more)
COMP10050-Software Engineering Project 1-201920 Spring - 4242020 - 542 PM/MaxTesting/UnitTesting/: CMakeLists.txt  main.c  maxFunction.c  maxFunction.h
COMP10050-Software Engineering Project 1-201920 Spring - 4242020 - 542 PM/TriangleTesting/TriangleTesting/: CMakeLists.txt  main.c  triangle.c  triangle.h
(+3424 files in other folders)
